--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "mongodb": "^4.13.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
