--- a/next-invento/package.json
+++ b/next-invento/package.json
@@ -2,7 +2,6 @@
   "name": "next-invento",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,7 +21,10 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "dotenv": "^16.6.1"
+    "autoprefixer": "^10.4.21",
+    "dotenv": "^16.6.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
