--- a/next-invento/package.json
+++ b/next-invento/package.json
@@ -2,6 +2,7 @@
   "name": "next-invento",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +11,7 @@
     "db:seed": "node src/scripts/seed.mjs"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
