--- a/next-invento/package.json
+++ b/next-invento/package.json
@@ -11,6 +11,7 @@
     "db:seed": "node src/scripts/seed.mjs"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.2",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
@@ -20,7 +21,10 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
